# camera-calibration

./: .gitignore  README.md  pyproject.toml
agent/: pyproject.toml
agent/sintez_cam_agent/: __main__.py  server.py
scripts/: run-tests.sh  run.sh  setup.sh
server/: app.py
server/core/: backproject.py  calibration.py  camera_manager.py  frame_pipeline.py  guidance.py  quality.py  remote_link.py  runtime.py  sessions_helpers.py  ssh_deploy.py  storage.py  stream_processing.py
server/data/: ssh_profiles.json
server/models/: schemas.py
server/routes/: backproject.py  calibration.py  cameras.py  profiles.py  remote_ssh.py  sessions.py  stream.py
server/static/: app.js  index.html  styles.css
tests/: _synthetic.py  conftest.py  test_api_calibrate_integration.py  test_api_chessboards.py  test_api_sessions.py  test_calibration_core.py  test_e2e_camera.py  test_frame_pipeline.py  test_guidance.py  test_legacy_migration.py  test_schemas.py
