[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sintez-cam-server"
version = "0.1.0"
description = "Web-based camera calibration server (FastAPI + OpenCV)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "opencv-contrib-python>=4.9",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "websockets>=12",
    "aiofiles>=23.2",
    "python-multipart>=0.0.9",
    "asyncssh>=2.14",
]

[project.optional-dependencies]
aravis = ["aravis>=0.8"]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "e2e: end-to-end tests requiring a physical camera (deselect with '-m \"not e2e\"')",
    "asyncio: async tests",
]
# Filter the warning emitted when /session-data is mounted after ensure_dirs().
filterwarnings = [
    "ignore::DeprecationWarning",
]