[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sintez-cam-agent"
version = "0.2.2"
description = "Remote camera streaming agent for sintez-cam-server."
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "websockets>=12",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
aravis = ["aravis>=0.8"]

[project.scripts]
sintez-cam-agent = "sintez_cam_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sintez_cam_agent*"]